Fixing really long words to be broken in comments and posts

--- a/client/src/components/comments/comments.scss
+++ b/client/src/components/comments/comments.scss
@@ -82,6 +82,7 @@
           white-space: -o-pre-wrap;
           word-wrap: break-word;
           word-break: keep-all;
+          overflow-wrap: break-word;
         }
       }
 
