--- a/client/src/components/post/post.scss
+++ b/client/src/components/post/post.scss
@@ -64,6 +64,7 @@
           white-space: -o-pre-wrap;
           word-wrap: break-word;
           word-break: keep-all;
+          overflow-wrap: break-word;
         }
         img {
           width: 100%;
